# olympic-boxing-video-dataset

./: .gitignore  LICENSE  README.md  config.py  convert_database_to_coco_format.py  database_review.py  dataset.py  evaluate.py  model.py  pyproject.toml  train.py  train_fold1.sbatch
